# tflite-micro

./: .bazelignore  .bazelrc  .bazelversion  .editorconfig  .gitignore  AUTHORS  BUILD  CODEOWNERS  CONTRIBUTING.md  MODULE.bazel  PEANUT-README.md  README.md  SECURITY.md  SECURITY_TEST_TRIGGER.txt  WORKSPACE  buid_platform_libs.sh  debugging_output.md  explain.txt  golden_data_calculation.txt  grass.txt  main.yml  pyproject.toml  run_seanet_integration_tests.py  test-interpreter.py  tflite_micro.py
.ci_vars/: fusion_f1.json
.github/: ci-error-template.md  dependabot.yml  mergify.yml  release.yml  scheduled-error-template.md  stale.yml  triggerfile.txt
.github/actions/docker_action/: Dockerfile  action.yml
.github/actions/sync_upstream_xmos_action/: action.yaml  package-lock.json  package.json  tsconfig.json
.github/assets/: Dockerfile  trivial-action.sh  write_json.py
.github/workflows/: apply_cirun.yml  arduino.yml  auto_label.yml  bug-tag.yml  check_bug_id.yml  check_pr_has_bug.yml  check_tflite_files.yml  ci-test-privileged.yml  ci-test.yml  ci.yaml  ci.yml  ci_bazel.yml  ci_embedded.yml  ci_makefile.yml  ci_misc.yml  cortex_m.yml  cortex_m_arm_compiler.yml  cortex_m_virtual_hardware.yml  create-issue.yml  debug_workflows.yml  esp32.yml  generate_integration_tests.yml  ghcr_test.yml  hexagon.yml  inspect_github.yml  issue_on_error.yml  log_binary_size.yml  log_binary_size_pr.yml  log_sizes.yml  main.yml  manage_labels.yml  merge_group.yml  pr_full.yml  pr_ready.yml  pr_test.yml  protect-files.yml  pypi_build.yml  ready_to_merge_apply.yml  ready_to_merge_trigger.yml  remove-labels.yml  (+37 more)
ci/: Dockerfile.hexagon  Dockerfile.micro  Dockerfile.stylechk  Dockerfile.xtensa_xplorer_11  Dockerfile.xtensa_xplorer_13  Dockerfile.xtensa_xplorer_solo  check_tflite_files.py  install_bazel.sh  install_bazelisk.sh  install_buildifier.sh  install_cores_xplorer_11.sh  install_cores_xplorer_13.sh  install_cores_xplorer_solo.sh  install_qemu.sh  issue_on_error.py  protected_list.py  size_comp.py  sync_from_upstream_tf.sh  sync_third_party_hexagon.sh  tflite_files.txt  upstream_list.txt
ci/flatbuffers_for_tf_sync/: build_defs.bzl  flatbuffers.BUILD
ci/metrics/: compare_memory_footprint.py  create_size_log_CMSIS_NN.sh  size_log_all_builds.sh  test_script.sh
ci/temp_patches/: tf_update_visibility.patch
codegen/: BUILD  README.md  build_def.bzl  code_generator.py  graph.py  inference_generator.py  tensor.py  utils.py
codegen/examples/hello_world/: BUILD  Makefile.inc  README.md  hello_world.cc  hello_world_model.cc  hello_world_model.h  update_example_source.sh
codegen/operators/: BUILD  constants.py  factory.py  fully_connected.py  operator.py
codegen/preprocessor/: BUILD  Makefile.inc  main.cc  preprocessor_schema.fbs  preprocessor_schema_generated.h  preprocessor_schema_py_generated.py  update_schema.sh
codegen/runtime/: BUILD  Makefile.inc  micro_codegen_context.cc  micro_codegen_context.h
codegen/templates/: inference.cc.mako  inference.h.mako
data/continuous_builds/: README.md
docs/: automatically_generated_files.md  continuous_integration.md  merge_queue.md  python.md
px4/cmsis/Cortex_DFP/: .gitignore  gen_pack.sh
px4/flatbuffers/: base.h  flexbuffers.h
px4/gemmlowp/: AUTHORS  CONTRIBUTING  flags.bzl
px4/gemmlowp/doc/: design.md  less-than-8-bit.md  packing.md  quantization_example.cc
px4/gemmlowp/fixedpoint/: fixedpoint_avx.h  fixedpoint_msa.h
px4/gemmlowp/internal/: kernel.h  kernel_msa.h  kernel_sse.h  output.h  output_sse.h  pack.h  pack_neon.h  platform.h  simd_wrappers.h  simd_wrappers_neon.h  unpack.h
px4/gemmlowp/jni/: Android.mk
px4/gemmlowp/meta/: test_gemm_correctness.cc  test_transform_benchmark.cc  test_transform_correctness.cc
px4/gemmlowp/profiling/: instrumentation.h
px4/gemmlowp/scripts/: ci-before.sh  test-android.sh
px4/gemmlowp/test/: benchmark.cc  correctness_meta_gemm.cc  test.cc  test_blocking_counter.cc  test_data.h  test_fixedpoint.cc  test_math_helpers.cc
px4/gemmlowp/todo/: multi-threading-experiments.txt  remove-default-template-param-values.txt  x86-kernels.txt
python/: BUILD  numpy_cc_targets.bzl  py_namespace.bzl  py_pkg_cc_deps.bzl  py_rules.bzl  python_requirements.in  python_requirements_3_10.txt  python_requirements_3_11.txt  python_requirements_3_12.txt  python_requirements_3_13.txt  tensorflow_cc_targets.bzl
python/tests/: BUILD  cc_deps_link_test.cc
python/tflite_micro/: BUILD  README.md  README.pypi.md.in  __init__.py  _runtime.cc  _version.py.in  compression_utils.h  flatbuffer_utils.py  flatbuffer_utils_test.py  interpreter_wrapper.cc  interpreter_wrapper.h  numpy_utils.cc  postinstall_check.py  pypi_build.dockerfile  pypi_build.sh  pypi_upload.sh  python_ops_resolver.cc  python_utils.cc  runtime.py  runtime_test.py  shared_library.h  test_compression_unsupported.py  test_utils.py  visualize_test.py  whl_test.sh
result/: result_add.txt  result_add_1_01.txt
signal/: BUILD  tflm_signal.bzl
signal/python/: __init__.py
signal/src/: BUILD  BUILD.orig  circular_buffer.cc  circular_buffer.h  complex.h  energy.cc  energy.h  fft_auto_scale.cc  fft_auto_scale.h  filter_bank.cc  filter_bank.h  filter_bank_log.cc  filter_bank_log.h  filter_bank_spectral_subtraction.h  filter_bank_square_root.h  irfft.h  irfft_float.cc  irfft_int16.cc  irfft_int32.cc  log.cc  log.h  max_abs.cc  max_abs.h  msb_32.cc  msb_64.cc  overlap_add.cc  overlap_add.h  pcan_argc_fixed.cc  pcan_argc_fixed.h  rfft.h  rfft_float.cc  rfft_int16.cc  rfft_int32.cc  square_root_32.cc  square_root_64.cc  window.cc  window.h
signal/testdata/: BUILD  fft_test_data.cc  fft_test_data.h
tensorflow/: BUILD  extra_rules.bzl  tensorflow.bzl  workspace.bzl
tensorflow/lite/: BUILD  array.cc  array.h  build_def.bzl  builtin_op_data.h  context_util.h  portable_type_to_tflitetype.h
tensorflow/lite/micro/tools/make/downloads/gemmlowp/contrib/: CMakeLists.txt
testing/fuzzing/: fuzz_model_load.cc
tests/poc/: test_poc.sh
tools/: BUILD  expand_stamp_vars.bzl  expand_stamp_vars.py  expand_stamp_vars_test.py  workspace_status.sh
(+2703 files in other folders)
